--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://0f3ef283-c717-4166-935e-f3013378647f.preview.emergentagent.com
 WDS_SOCKET_PORT=443
